--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,7 +1,7 @@
 .header {
     @apply flex justify-between fixed top-0 left-0 right-0 items-center py-8 px-24 bg-zinc-900 z-20 shadow-md shadow-neutral-900 rounded-b-full transition-all duration-500
     lg:px-40
-    max-sm:px-14
+    max-sm:px-14 max-sm:py-5
 }
 
 .header.hidden {
@@ -30,4 +30,5 @@
 
 .menu-open-btn {
     @apply absolute top-8 right-[10%] ml-auto text-stone-50 xl:hidden lg:right-[15%] md:top-10
+    max-sm:top-5
 }
